# YAFLT

./: CMakeLists.txt  FLTConfig.cmake.in  FLTConfigVersion.cmake.in  README  README.md
doc/: Doxyfile  Doxyfile.in  introduction.md  unroll_bicubic_calculation_of_coefficients.py
examples/: CMakeLists.txt  README  README.md  data_for_spline.h  data_for_target.h  embreeTest1.cpp  embreeTest2.cpp  flt1.cpp  flt2.cpp  flt3.cpp  inres1_example.cpp  parallel_speed_testing.cpp  polylineWriter.cpp
src/: CMakeLists.txt  README  README.md  accell_embree.cpp  accell_embree.hpp  bicubic.cpp  bicubic.hpp  flt.cpp  flt.hpp  rkf45.cpp  rkf45.hpp
test/: CMakeLists.txt  README.md
test/embree/: test_intersection.cpp
test/include/: bicubic_vector.cpp  bicubic_vector.hpp  data_for_shadow.h  data_for_spline.h  eqdsk_drsep10_data.hpp  eqdsk_drsep6.65_data.hpp
test/include/alglib/: licenses
test/interpolation/: 1_accuracy.cpp  2_accuracy_with_flt.cpp  3_performance.cpp  4_derivative_eval.cpp  5_derivative_eval_with_flt.cpp  6_check_values.cpp  7_test_rkf45_stability.cpp  8_simple_test_case.cpp  9_omp_performance.cpp  CMakeLists.txt  README  accuracy.cpp  finite_difference_check.cpp  omp_performance.cpp  plot_points.py  serial_performance.cpp  test_1_accuracy.cpp  test_2_serial_performance.cpp  test_3_omp_performance.cpp  test_4_finite_difference_check.cpp
test/objects/: CMakeLists.txt  README  create_and_delete_objects.cpp
test/rkf45/: CMakeLists.txt  README  test_1_rkf45_stability.cpp  test_rkf45_method.cpp  test_rkf45_method_stability.cpp  test_stability.cpp
